...
                    android:checkedButton="@={viewModel.selectedInsomniaRadio}"
                    android:theme="@style/PsyTestColorTheme"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_item_sleep_title">

                    <RadioButton
                        android:id="@+id/radio_insomnia_never"
                        style="@style/psy_test_button"
                        android:tag="0"
                        android:text="@string/never" />

                    <RadioButton
                        android:id="@+id/radio_insomnia_seldom"
...
                        android:id="@+id/radio_anxiety_never"
                        style="@style/psy_test_button"
                        android:tag="0"
                        android:text="@string/never" />

                    <RadioButton
                        android:id="@+id/radio_anxiety_seldom"
                        style="@style/psy_test_button"
                        android:tag="1"
                        android:text="@string/seldom" />

                    <RadioButton
                        android:id="@+id/radio_anxiety_sometimes"
...
                        android:id="@+id/radio_angry_never"
                        style="@style/psy_test_button"
                        android:tag="0"
                        android:text="@string/never" />

                    <RadioButton
                        android:id="@+id/radio_angry_seldom"
                        style="@style/psy_test_button"
                        android:tag="1"
                        android:text="@string/seldom" />

                    <RadioButton
                        android:id="@+id/radio_angry_sometimes"
...
                        android:id="@+id/radio_depression_never"
                        style="@style/psy_test_button"
                        android:tag="0"
                        android:text="@string/never" />

                    <RadioButton
                        android:id="@+id/radio_depression_seldom"
                        style="@style/psy_test_button"
                        android:tag="1"
                        android:text="@string/seldom" />

                    <RadioButton
                        android:id="@+id/radio_depression_sometimes"
...
                        android:id="@+id/radio_inferiority_never"
                        style="@style/psy_test_button"
                        android:tag="0"
                        android:text="@string/never" />

                    <RadioButton
                        android:id="@+id/radio_inferiority_seldom"
                        style="@style/psy_test_button"
                        android:tag="1"
                        android:text="@string/seldom" />

                    <RadioButton
                        android:id="@+id/radio_inferiority_sometimes"
...
                        android:id="@+id/radio_suicide_never"
                        style="@style/psy_test_button"
                        android:tag="0"
                        android:text="@string/never" />

                    <RadioButton
                        android:id="@+id/radio_suicide_seldom"
                        style="@style/psy_test_button"
                        android:tag="1"
                        android:text="@string/seldom" />

                    <RadioButton
                        android:id="@+id/radio_suicide_sometimes"
...
                        android:tag="4"
                        android:text="@string/always" />

                </RadioGroup>

                <Button
                    android:id="@+id/button_psy_text_body"
                    style="@style/RecordDetailButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:layout_marginBottom="@dimen/spacing_normal"
...
