...

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_record_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/spacing_normal"
            app:layout_constraintBottom_toTopOf="@id/button_record_detail_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_record_detail_top">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_record_detail_body"
...
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image_note_image_record_detail"
                    app:textToDisplayMoodColor="@{viewModel.note.mood}" />

                <EditText
                    android:id="@+id/edit_record_detail_content"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginHorizontal="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginBottom="@dimen/spacing_quarter"
                    android:background="@drawable/edit_note_ripple"
...
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@id/text_content_title_record_detail"
                    app:layout_constraintTop_toBottomOf="@id/edit_record_detail_content"
                    app:textToDisplayMoodColor="@{viewModel.note.mood}" />

                <EditText
                    android:id="@+id/edit_record_detail_tag"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginEnd="@dimen/spacing_quarter"
                    android:background="@drawable/edit_note_ripple"
                    android:gravity="top|start"
...
                    android:maxLines="1"
                    android:padding="6dp"
                    android:text="@={viewModel.newTag}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_888888"
                    android:textSize="@dimen/text_size_tag"
                    app:layout_constraintEnd_toStartOf="@id/button_record_detail_add_tags"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/text_content_title_record_detail"
                    app:layout_constraintTop_toBottomOf="@id/text_tag_title_record_detail" />

                <ImageButton
                    android:id="@+id/button_record_detail_add_tags"
...
