...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />


        <ImageView
            android:id="@+id/image_mood_very_good_record_mood"
            android:layout_width="@dimen/size_record_mood_icon"
            android:layout_height="0dp"
            android:layout_marginTop="72dp"
            android:background="@{viewModel.selectedMood == Mood.VERY_GOOD.value?@drawable/ic_mood_circle_very_good_selected : @drawable/ic_mood_circle_very_good_normal}"
            android:onClick="@{() -> viewModel.selectMood(Mood.VERY_GOOD)}"
            app:layout_constraintDimensionRatio="1:1"
...
            app:layout_constraintStart_toEndOf="@id/image_mood_good_record_mood"
            app:layout_constraintTop_toTopOf="@id/image_mood_bad_record_mood"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="385dp" />

        <Button
            android:id="@+id/button_add_detail_record_mood"
            style="@style/RecordMoodButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_large"
            android:background="@{viewModel.selectedMood == 0 || viewModel.selectedMood == null ? @drawable/bg_record_mood_button_invalid : @drawable/bg_record_mood_button }"
...
